--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ MONGO_USERNAME=dbAdmin
 MONGO_PASSWORD=password
 MONGO_AUTH_SOURCE=admin
 MONGO_MECHANISM=SCRAM-SHA-1
+
+JWT_TOKEN_SECRET=secret_token
